minor text fix on mobile

--- a/public/index/index.scss
+++ b/public/index/index.scss
@@ -232,8 +232,7 @@ body,html{
         }
     }
     .About{
-        grid-column: 1/11;
-        font-size: 0.5em;
+        font-size: 0.8em;
     }
 }
 @media (min-width:768px){
@@ -243,10 +242,6 @@ body,html{
                 font-size: 1em;
             }
         }
-    }
-    .About{
-        grid-column: 1/11;
-        font-size: 1em;
     }
 }
 @media (max-width:768px){
@@ -269,7 +264,6 @@ body,html{
         }
     }
     .About{
-        grid-column: 1/11;
         font-size: 1.5em;
     }
 }
@@ -291,6 +285,9 @@ body,html{
                 width: 90%;
             }
         }
+    }
+    .About{
+        grid-column: 1/11;
     }
 }
 @media (min-width:1025px) and (max-height:855px){
